# cq-centrifugal-fan

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cq_centrifugal_fan/: debug.py  errors.py  shapes.py
cq_centrifugal_fan/use_cases/: default.py
